[package]
name = "rust_book_examples"
version = "0.1.0"
authors = ["Antonio Diaz <hello@antoniodiaz.me>"]
edition = "2018"
description = "Exercises for Rust book"
license = "CC0: https://creativecommons.org/share-your-work/public-domain/cc0/"


# Default conf, just for demostration
[profile.dev]
opt-level = 0

[dependencies]
add-one = { path = "./src/cap_14_01_cargo_crates/add-one" }
hello_macro = { path = "hello_macro" }
hello_macro_derive = { path = "hello_macro_derive" }
